syntax = "proto3";
package DomainServices.SalesArrangementService;
option csharp_namespace = "DomainServices.SalesArrangementService.Contracts";

import "google/protobuf/wrappers.proto";
import "GrpcDate.proto";
import "NullableGrpcDate.proto";
import "Identity.proto";
import "GrpcDecimal.proto";

message SalesArrangementParametersDrawing {
	cis.types.Identity Applicant = 1;
	SalesArrangementParametersDrawingAgent Agent = 2;
	SalesArrangementParametersDrawingRepaymentAccount RepaymentAccount = 3;
	repeated SalesArrangementParametersDrawingPayoutList PayoutList = 4;
	cis.types.NullableGrpcDate DrawingDate = 5;
	bool IsImmediateDrawing = 6;

	message SalesArrangementParametersDrawingAgent {
		google.protobuf.StringValue FirstName = 1;
		google.protobuf.StringValue LastName = 2;
		cis.types.GrpcDate DateOfBirth = 3;
		SalesArrangementParametersDrawingIdentificationDocument IdentificationDocument = 4;
		bool IsActive = 5;
	}

	message SalesArrangementParametersDrawingIdentificationDocument {
		int32 IdentificationDocumentTypeId = 1;
		string Number = 2;
	}

	message SalesArrangementParametersDrawingRepaymentAccount {
		bool IsAccountNumberMissing = 1;
		string Prefix = 2;
		string Number = 3;
		string BankCode = 4;
	}

	message SalesArrangementParametersDrawingPayoutList {
		google.protobuf.Int32Value ProductObligationId = 1;
		int32 Order = 2;
		cis.types.GrpcDecimal DrawingAmount = 3;
		string PrefixAccount = 4;
		string AccountNumber = 5;
		string BankCode = 6;
		google.protobuf.StringValue VariableSymbol = 7;
		google.protobuf.StringValue SpecificSymbolUcetKeSplaceni = 8;
		google.protobuf.StringValue ConstantSymbol = 9;
		int32 PayoutTypeId = 10;
	}
}

